--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.4",
     "sqlite3": "^5.1.7",
     "strapi-plugin-import-export-entries": "^1.23.1",
+    "strapi-plugin-populate-deep": "^3.0.1",
     "styled-components": "^5.3.11"
   },
   "author": {
